# da-metadata-store

./: .gitignore  Dockerfile.django  README.md  bootstrap.json  bootstrap.yml  docker-compose.yml  migrate.py  package-lock.json  package.json  pyproject.toml  requirements-migration.txt  requirements.txt  zappa_settings.json
.github/workflows/: deploy.yml  test.yml
saml_auth/: urls.py  views.py
saml_auth/tests/: test_routes.py
store/: import_record.py  models.py  settings.py  urls.py  validator.py  views.py
store/db_backend/: base.py
store/fixtures/: change_reason.json
store/management/commands/: import_record.py  recreate_db_function.py
store/migrations/: 0001_initial.py  0002_add_api_user.py
store/tests/: test_import_record.py  test_models.py  test_routes.py  test_views.py
templates/: base.html  record.html  results.html  search.html  submitted.html  upload.html
terraform/: .terraform.lock.hcl  api_gateway.tf  cloudfront.tf  cognito.tf  data.tf  db.tf  iam.tf  intg.auto.tfvars  lambdas.tf  main.tf  networking.tf  outputs.tf  prod.auto.tfvars  provider.tf  s3.tf  sqs.tf  variables.tf  waf.tf
terraform/apigateway/: cognito_proxy.json.tpl  metadata_store.json.tpl
terraform/lambda/: catalogue_updates.py
terraform/templates/apigateway/: api.json  cognito_proxy.json.tpl  metadata_store.json.tpl
terraform/templates/lambda/: catalogue_cache_writer.py  catalogue_updates.py
tests/e2e/: cypress.config.js  cypress.config.ts  package-lock.json  package.json
tests/oidc-config/: settings.yaml  users.yaml
tests/test_scripts/: test-fixture.json
(+13 files in other folders)
